# faiss

./: AutoTune.cpp  CMakeLists.txt  Clustering.cpp  FaissAssert.h  Heap.cpp  Heap.h  Index.cpp  Index.h  IndexBinary.cpp  IndexBinary.h  IndexBinaryFlat.cpp  IndexBinaryFlat.h  IndexBinaryIVF.cpp  IndexBinaryIVF.h  IndexFlat.cpp  IndexFlat.h  IndexHNSW.cpp  IndexIVF.cpp  IndexIVF.h  IndexIVFFlat.cpp  IndexIVFFlat.h  IndexIVFPQ.cpp  IndexIVFPQ.h  IndexPQ.cpp  IndexPQ.h  IndexScalarQuantizer.cpp  IndexScalarQuantizer.h  MetaIndexes.cpp  MetaIndexes.h  OnDiskInvertedLists.cpp  OnDiskInvertedLists.h  ProductQuantizer.cpp  VectorTransform.cpp  VectorTransform.h  hamming.cpp  hamming.h  index_io.cpp  utils.cpp  utils.h
cmake/: Cuda.cmake
gpu/: CMakeLists.txt  GpuIndex.cu  GpuIndex.h  GpuIndexFlat.cu  GpuIndexFlat.h  GpuIndexIVFFlat.cu  GpuIndexIVFPQ.cu  GpuIndexIVFPQ.h
gpu/impl/: Distance.cu  IVFBase.cu  IVFBase.cuh  IVFFlat.cu  IVFFlat.cuh  IVFFlatScan.cu  IVFFlatScan.cuh  IVFPQ.cu  IVFPQ.cuh  IVFUtils.cu  IVFUtils.cuh  IVFUtilsSelect2.cu  InvertedListAppend.cu  InvertedListAppend.cuh  PQCodeDistances.cu  PQCodeLoad.cuh  PQScanMultiPassNoPrecomputed.cu  PQScanMultiPassNoPrecomputed.cuh  PQScanMultiPassPrecomputed.cu  PQScanMultiPassPrecomputed.cuh  RemapIndices.cu  RemapIndices.h  VectorResidual.cu
gpu/test/: CMakeLists.txt  demo_ivfpq_indexing_gpu.cpp
gpu/utils/: DeviceTensor-inl.cuh  DeviceTensor.cuh  HostTensor-inl.cuh  HostTensor.cuh  PtxUtils.cuh  StackDeviceMemory.cpp  Tensor-inl.cuh  Tensor.cuh  Timer.cpp  Timer.h  Transpose.cuh
gpu/utils/warpselect/: WarpSelectImpl.cuh
tests/: CMakeLists.txt
tutorial/cpp/: 1-Flat.cpp  2-IVFFlat.cpp  3-IVFPQ.cpp  5-Multiple-GPUs.cpp  CMakeLists.txt
